[package]
name = "greenis"
version = "0.1.0"
authors = ["roger <rogerduran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.1"
combine = { "git" = "https://github.com/Marwes/combine.git" }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5"
env_logger = "0.7.1"
log = "0.4.8"
